test/files/neg/t961.check
t961.scala:11: error: object Temp.B does not take parameters
  B() match {
   ^
one error found
